# ZaffreBot

./: README.md  pyproject.toml
images/: generate.py
