[tool.poetry]
name = "zaffrebot"
version = "0.1.0"
description = "A discord bot that lets you do your Githubbing on Discord!"
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "GPLv3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
